# dlpackrs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  changelog-template.hbs  rustfmt.toml
.github/workflows/: build.yml  publish.yml
dlpack-sys/: Cargo.toml  README.md  build.rs
examples/sample/: Cargo.toml
examples/sample/src/: main.rs
src/: datatype.rs  device.rs  errors.rs  lib.rs  tensor.rs
